@@ -5,7 +5,7 @@
 ;
 !include "MUI.nsh"
 
-!define VERSION "0.1.2.2-alpha"
+!define VERSION "0.1.2.3-alpha-dev"
 !define INSTALLER "tor-${VERSION}-win32.exe"
 !define WEBSITE "http://tor.eff.org/"
 
@@ -105,6 +105,7 @@ Section "Documents" Docs
    File "..\doc\dir-spec.txt"
    File "..\doc\rend-spec.txt"
    File "..\doc\socks-extensions.txt"
+   File "..\doc\tor-spec.txt"
    File "..\doc\version-spec.txt"
    ;
    ; WEBSITE-FILES-HERE
@@ -146,7 +147,7 @@ Section "Start Menu" StartMenu
    CreateShortCut "$SMPROGRAMS\Tor\Uninstall.lnk" "$INSTDIR\Uninstall.exe"
    IfFileExists "$INSTDIR\Documents\*.*" "" endifdocs
       CreateDirectory "$SMPROGRAMS\Tor\Documents"
-      CreateShortCut "$SMPROGRAMS\Tor\Documents\Tor Manual.lnk" "$INSTDIR\Documents\tor-doc.html"
+      CreateShortCut "$SMPROGRAMS\Tor\Documents\Tor Manual.lnk" "$INSTDIR\Documents\tor-reference.html"
       CreateShortCut "$SMPROGRAMS\Tor\Documents\Tor Documentation.lnk" "$INSTDIR\Documents"
       CreateShortCut "$SMPROGRAMS\Tor\Documents\Tor Specification.lnk" "$INSTDIR\Documents\tor-spec.txt"
    endifdocs:
